updated with additional options

--- a/winlogbeat_example.yml
+++ b/winlogbeat_example.yml
@@ -2,13 +2,18 @@
 
 winlogbeat.event_logs:
   - name: ${EVTX_FILE} 
-    no_more_events: stop 
+    no_more_events: stop
 
-winlogbeat.shutdown_timeout: 1s 
+winlogbeat.shutdown_timeout: 1s
 winlogbeat.registry_file: "${CWD}/winlogbeat/evtx-registry.yml"
 
-#output.elasticsearch.hosts: ['http://localhost:9200']
-#output.logstash.hosts: ['http://localhost:5044']
+output.elasticsearch:
+  enabled: false
+  hosts: ['http://localhost:9200']
+
+output.logstash:
+  enabled: false
+  hosts: ['localhost:5044']
 
 output.file:
   #enabled: false
@@ -16,13 +21,15 @@ output.file:
   filename: events.json
   number_of_files: 2
 
-#output.kafka:
-#  enabled: false
-#  hosts: ["kafka1:9092", "kafka2:9092", "kafka3:9092"]
-#  topic: 'kafka_topic'
+output.kafka:
+  enabled: false
+  hosts: ["kafka1:9092", "kafka2:9092", "kafka3:9092"]
+  topic: 'kafka_topic'
 
-logging.to_files: false
-logging.files:
-  path: "${CWD}/winlogbeat"
-  name: winlogbeat
-  keepfiles: 2
+logging:
+  #level: info
+  level: warning
+  files:
+    path: "${CWD}/winlogbeat"
+    rotateonstartup: false
+    keepfiles: 2
